[gd_scene load_steps=5 format=2]

[ext_resource path="res://godot_fontpack/Godot-Fontpack-master/fonts/architect-s-daughter/ArchitectsDaughter.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://main_menu.gd" type="Script" id=2]
[ext_resource path="res://control_face.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="MainMenuCanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_left = 404.0
margin_top = 203.0
margin_right = 620.0
margin_bottom = 397.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 216.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "Practice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateNewMapButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 216.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 219, 31 )
custom_fonts/font = SubResource( 1 )
text = "Map Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 216.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( 219, 31 )
custom_fonts/font = SubResource( 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/CreateNewMapButton" to="." method="_on_CreateNewMapButton_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
